--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"axios": "^0.17.1",
+		"axios": "^0.18.0",
 		"bootstrap": "^4.0.0-beta.2",
 		"code-prettify": "^0.1.0",
 		"font-awesome": "^4.7.0",
 		"localforage": "^1.5.3",
 		"moment": "^2.19.2",
-		"node-sass-chokidar": "^0.0.3",
+		"node-sass-chokidar": "^1.3.0",
 		"npm-run-all": "^4.1.2",
 		"react": "^16.1.1",
 		"react-code-prettify": "^0.0.1",
@@ -18,14 +18,14 @@
 		"react-json-tree": "^0.11.0",
 		"react-paginate": "^5.0.0",
 		"react-redux": "^5.0.6",
-		"react-redux-loading-bar": "^3.1.1",
-		"react-scripts": "1.0.17",
-		"redux": "^3.7.2",
+		"react-redux-loading-bar": "^4.0.5",
+		"react-scripts": "1.1.4",
+		"redux": "^4.0.0",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^5.3.5",
 		"redux-promise-middleware": "^5.0.0"
 	},
-	"proxy": "http://localhost:8100/",
+	"proxy": "http://localhost:8100",
 	"scripts": {
 		"build-css": "node-sass-chokidar src/ -o src/",
 		"watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
@@ -33,6 +33,7 @@
 		"eject": "react-scripts eject",
 		"start-js": "react-scripts start",
 		"start-server": "realize run",
+		"start-fe": "npm-run-all -p watch-css start-js",
 		"start": "npm-run-all -p start-server watch-css start-js",
 		"build": "npm run build-css && react-scripts build && rice embed-go"
 	}
