--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"private": true,
 	"dependencies": {
 		"axios": "^0.18.0",
+		"babel-eslint": "^8.2.3",
 		"bootstrap": "^4.0.0-beta.2",
 		"code-prettify": "^0.1.0",
+		"eslint-plugin-react": "^7.8.2",
 		"font-awesome": "^4.7.0",
 		"localforage": "^1.5.3",
 		"moment": "^2.19.2",
@@ -16,10 +18,10 @@
 		"react-datetime": "^2.11.0",
 		"react-dom": "^16.1.1",
 		"react-json-tree": "^0.11.0",
-		"react-paginate": "^5.0.0",
+		"react-paginate": "^5.2.3",
 		"react-redux": "^5.0.6",
 		"react-redux-loading-bar": "^4.0.5",
-		"react-scripts": "1.1.4",
+		"react-scripts": "2.0.0-next.66cc7a90",
 		"redux": "^4.0.0",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^5.3.5",
@@ -36,5 +38,9 @@
 		"start-fe": "npm-run-all -p watch-css start-js",
 		"start": "npm-run-all -p start-server watch-css start-js",
 		"build": "npm run build-css && react-scripts build && rice embed-go"
+	},
+	"browserslist": {
+		"development": ["last 2 chrome versions", "last 2 firefox versions"],
+		"production": ["last 2 chrome versions", "last 2 firefox versions"]
 	}
 }
