--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
 # testing
 /coverage
 
@@ -16,15 +11,41 @@
 .env.test.local
 .env.production.local
 
+*.bolt
+requestbin.yml
+
+rice-box.go
+requestbin
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-vendor
+pnpm-debug.log*
+lerna-debug.log*
 
-*.bolt
-requestbin.yml
-.realize
+node_modules
+dist
+dist-ssr
+*.local
 
-vendor.orig
-rice-box.go
-requestbin
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
