--- a/package.json
+++ b/package.json
@@ -1,43 +1,51 @@
 {
-	"name": "my-app",
+	"name": "requestbin",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"dependencies": {
-		"axios": "^0.18.0",
-		"babel-eslint": "^8.2.3",
-		"bootstrap": "^4.0.0-beta.2",
-		"code-prettify": "^0.1.0",
-		"eslint-plugin-react": "^7.8.2",
-		"font-awesome": "^4.7.0",
-		"localforage": "^1.5.3",
-		"moment": "^2.19.2",
-		"node-sass-chokidar": "^1.3.0",
-		"npm-run-all": "^4.1.2",
-		"react": "^16.1.1",
-		"react-code-prettify": "^0.0.1",
-		"react-datetime": "^2.11.0",
-		"react-dom": "^16.1.1",
-		"react-json-tree": "^0.11.0",
-		"react-paginate": "^5.2.3",
-		"react-redux": "^5.0.6",
-		"react-redux-loading-bar": "^4.0.5",
-		"react-scripts": "2.0.0-next.66cc7a90",
-		"redux": "^4.0.0",
-		"redux-logger": "^3.0.6",
-		"redux-persist": "^5.3.5",
-		"redux-promise-middleware": "^5.0.0"
+		"@types/node": "18.11.18",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.0.10",
+		"@vitejs/plugin-react-swc": "3.0.1",
+		"axios": "1.2.1",
+		"babel-eslint": "8.2.3",
+		"bootstrap": "5.2.3",
+		"code-prettify": "0.1.0",
+		"eslint-plugin-react": "7.31.11",
+		"font-awesome": "4.7.0",
+		"localforage": "1.10.0",
+		"moment": "2.29.4",
+		"npm-run-all": "4.1.5",
+		"react": "18.2.0",
+		"react-code-prettify": "0.0.1",
+		"react-datetime": "3.2.0",
+		"react-dom": "18.2.0",
+		"react-json-tree": "0.17.0",
+		"react-paginate": "8.1.4",
+		"react-redux": "8.0.5",
+		"react-redux-loading-bar": "5.0.4",
+		"redux": "4.2.0",
+		"redux-logger": "3.0.6",
+		"redux-persist": "6.0.0",
+		"redux-promise-middleware": "6.1.3",
+		"sass": "1.57.1",
+		"typescript": "4.9.4",
+		"vite": "4.0.3"
 	},
 	"proxy": "http://localhost:8100",
 	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
 		"build-css": "node-sass-chokidar src/ -o src/",
 		"watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
 		"test": "react-scripts test --env=jsdom",
-		"eject": "react-scripts eject",
 		"start-js": "react-scripts start",
 		"start-server": "realize run",
 		"start-fe": "npm-run-all -p watch-css start-js",
 		"start": "npm-run-all -p start-server watch-css start-js",
-		"build": "yarn build-css && react-scripts build && rice embed-go"
+		"build2": "yarn build-css && react-scripts build && rice embed-go"
 	},
 	"browserslist": {
 		"development": [
@@ -48,5 +56,6 @@
 			"last 2 chrome versions",
 			"last 2 firefox versions"
 		]
-	}
+	},
+	"packageManager": "yarn@3.3.1"
 }
