--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.10",
 		"@vitejs/plugin-react-swc": "3.0.1",
-		"axios": "1.2.1",
+		"axios": "^1.2.1",
 		"babel-eslint": "8.2.3",
 		"bootstrap": "5.2.3",
-		"code-prettify": "0.1.0",
-		"eslint-plugin-react": "7.31.11",
+		"code-prettify": "^0.1.0",
 		"font-awesome": "4.7.0",
 		"localforage": "1.10.0",
 		"moment": "2.29.4",
 		"npm-run-all": "4.1.5",
-		"react": "18.2.0",
+		"react": "^18.2.0",
 		"react-code-prettify": "0.0.1",
 		"react-datetime": "3.2.0",
 		"react-dom": "18.2.0",
-		"react-json-tree": "0.17.0",
+		"react-json-tree": "^0.17.0",
 		"react-paginate": "8.1.4",
+		"react-query": "^3.39.2",
 		"react-redux": "8.0.5",
 		"react-redux-loading-bar": "5.0.4",
 		"redux": "4.2.0",
