--- a/package.json
+++ b/package.json
@@ -8,40 +8,28 @@
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.10",
 		"@vitejs/plugin-react-swc": "3.0.1",
-		"axios": "^1.2.1",
-		"babel-eslint": "8.2.3",
 		"bootstrap": "5.2.3",
-		"code-prettify": "^0.1.0",
 		"font-awesome": "4.7.0",
-		"localforage": "1.10.0",
 		"moment": "2.29.4",
-		"npm-run-all": "4.1.5",
 		"react": "^18.2.0",
-		"react-code-prettify": "0.0.1",
 		"react-datetime": "3.2.0",
 		"react-dom": "18.2.0",
 		"react-json-tree": "^0.17.0",
 		"react-paginate": "8.1.4",
 		"react-query": "^3.39.2",
-		"react-redux": "8.0.5",
-		"react-redux-loading-bar": "5.0.4",
-		"redux": "4.2.0",
-		"redux-logger": "3.0.6",
-		"redux-persist": "6.0.0",
-		"redux-promise-middleware": "6.1.3",
+		"react-syntax-highlighter": "^15.5.0",
 		"sass": "1.57.1",
 		"typescript": "4.9.4",
 		"vite": "4.0.3"
 	},
 	"proxy": "http://localhost:8100",
 	"scripts": {
+		"ci": "rome ci .",
+		"lint": "rome check --apply-suggested .",
+		"pretty": "rome format --write .",
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"build-css": "node-sass-chokidar src/ -o src/",
-		"watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-		"test": "react-scripts test --env=jsdom",
-		"start-js": "react-scripts start",
 		"start-server": "realize run",
 		"start-fe": "npm-run-all -p watch-css start-js",
 		"start": "npm-run-all -p start-server watch-css start-js",
@@ -57,5 +45,9 @@
 			"last 2 firefox versions"
 		]
 	},
-	"packageManager": "yarn@3.3.1"
+	"packageManager": "yarn@3.3.1",
+	"devDependencies": {
+		"@types/react-syntax-highlighter": "^15",
+		"rome": "^11.0.0"
+	}
 }
